[package]
name = "comment-feed-ws-send-message"
version = "0.1.0"
authors = ["kazuma murata <kazzix14@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
rusoto_core = "0.45"
rusoto_dynamodb = "0.45"
rusoto_apigatewaymanagementapi = "0.45"
dynomite = "0.10"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"